<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7B1FA2"
    android:id="@+id/constraintLayout"
    tools:context=".getAnswer">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="And the answer is...."
        android:textColor="#42A5F5"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt1"
        android:textColor="@color/option1"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt2"
        android:textColor="@color/option2"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt3"
        android:textColor="@color/option3"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt4"
        android:textColor="@color/option4"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt5"
        android:textColor="@color/option5"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt6"
        android:textColor="@color/option6"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt7"
        android:textColor="@color/option7"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt8"
        android:textColor="@color/option8"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt9"
        android:textColor="@color/option9"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/opt10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt10"
        android:textColor="@color/option10"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opt11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt11"
        android:textColor="@color/option11"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opt12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt12"
        android:textColor="@color/option12"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opt13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt13"
        android:textColor="@color/option13"
        android:textColorHighlight="#26C6DA"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20sp"
        android:paddingVertical="30sp"
        android:text="@string/dare"
        android:textAlignment="center"
        android:textColorHighlight="#26C6DA"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <Button
        android:id="@+id/button"
        android:layout_width="203dp"
        android:layout_height="727dp"
        android:backgroundTint="#949398"
        android:text="left"
        android:textColor="#F4DF4E"
        android:textColorHighlight="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="205dp"
        android:layout_height="727dp"
        android:backgroundTint="#949398"
        android:text="right"
        android:textColor="#F4DF4E"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>